--- a/templates/index.html
+++ b/templates/index.html
@@ -339,8 +339,8 @@
             <div class="get-the-app">
                 <span>Get the app</span>
                 <div class="app-images">
-                    <a href="#"><img src="photos/applestore.png" /></a>
-                    <a href="#"><img src="photos/googlestore.png" /></a>
+                    <a href="#"><img src="static/photos/applestore.png" /></a>
+                    <a href="#"><img src="static/photos/googlestore.png" /></a>
                 </div>
             </div>
         </div>
